# arranger_pd

./: .gitignore  .gitmodules  arranger.mmp  arranger.pd  build.sh  leesmij.txt  songs.txt
juce_app/: CMakeLists.txt  CppCheckSupressions.txt  CustomStandalone.cpp  CustomStandaloneFilterWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce_app/arranger/: ArrangerLogic.cpp  ArrangerLogic.h
juce_app/gui/: CategoryAssignComponent.h  MidiAssignComponent.h  OptionsPanel.cpp  OptionsPanel.h  PresetPanel.cpp  PresetPanel.h  SampleButton.cpp  SampleButton.h  SliderLookAndFeel.h  readme.txt
juce_app/handlers/: AudioFileHandler.cpp  AudioFileHandler.h  MidiHandler.cpp  MidiHandler.h
juce_app/service/: PresetManager.cpp  PresetManager.h
pd_external/: CMakeLists.txt  helloworld.cpp  helloworld.h  songdataselector.cpp  songdataselector.h
